# Lee-paw-faith

./: .gitignore  Atharva Vyas BUSA 649 Project Proposal.docx  README.md  app.py  app_pydeck_v2.py  app_v2.py  main.py  main_dashboard.py  pyproject.toml  streamlit_app.py  streamlit_app_v3.py  streamlit_time_series_app.py  time_series_app_v2.py  ~$harva Vyas BUSA 649 Project Proposal.docx  ~$oject Proposal.docx
.devcontainer/: devcontainer.json
Notebooks/: Austin ML Model.ipynb  Austin_time_series.ipynb  Long Beach EDA.ipynb  Long Beach ML Model.ipynb  San Jose EDA.ipynb  Sonoma.ipynb  Sonoma_time_series.ipynb  xgboost_ch_dashboard.py  xgboost_dashboard.py
