[project]
name = "community-capstone"
version = "0.1.0"
description = "Community capstone 2025: Animal shelter problem solving with machine learning"
authors = [
    {name = "atharvavyas1",email = "atharva.vyas25@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit",
    "pandas",
    "numpy",
    "requests",
    "pydeck",
    "missingno (>=0.5.2,<0.6.0)",
    "folium (>=0.19.7,<0.20.0)",
    "streamlit-folium (>=0.25.0,<0.26.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"